syntax = "proto3";
package  org.jaxos.network.protobuff;

option java_outer_classname="PaxosMessage";

enum Code {
  NOOP = 0;
  
  HEARTBEAT_REQ = 1;
  HEARTBEAT_RES = 2;
  
  PREPARE_REQ = 3;
  PREPARE_RES = 4;
  ACCEPT_REQ = 5;
  ACCEPT_RES = 6;
}

message DataGram {
  Code code = 1;
  int32 sender = 2;
  int64 instanceId = 3;
  bytes body = 4;
}

message PrepareReq {
  int32 ballot = 1;
}

message PrepareRes {
  bool success = 1;
  int32 maxBallot = 2;
  int32 acceptedBallot = 3;
  bytes acceptedValue = 4;
}

message AcceptReq {
  int32 ballot = 1;
  bytes value = 2;
}

message AcceptRes {
  bool success = 1;
  int32 maxBallot = 2;
}




